2004-09-16  Ilja Booij  <ilja@ic-s.nl>

	* db.c (db_get_msgdate): fixed error in query. Strings were in the
	wrong order, causing a weird query.

	* imaputil.c (date_sql2imap): add daylight savings time information.
	(retrieve_structure): fixed white issue in IMAP output.

2004-09-15  Ilja Booij  <ilja@ic-s.nl>

	* INSTALL.postfix: host -> hosts in postfix-mysql config.

2004-09-15  Paul Stevens <paul@nfg.nl>

	* db.c, db.h, dbmsgbuf.c, dbmsgbuf.h, pipe.c, rfcmsg.c,
	smtp-convert.c: start using the is_header field during message
	insertion.

2004-09-15  Paul Stevens <paul@nfg.nl>

	* config.c, db.c, dbmail.conf, dbmail.h, dbmsgbuf.c, dbsearch.c,
	mysql/dbmysql.c, pgsql/dbpgsql.c: adding dynamic table prefixes by
	Leif Jackson.
	
2004-09-15  Ilja Booij  <ilja@ic-s.nl>

	* db.c (db_set_deleted): removed db_free_result() call that shouldn't
	have been there.
	(db_imap_append_msg): removed db_free_result() call that shouldn't
	have been there.
	(db_set_rfcsize): added two db_free_result() calls.

	* auth/authsql.c (auth_validate): added a db_free_result() statement
	where one was missing. 

	* pop3.c (pop3_handle_connection): added call to db_session_cleanup()
	to clean up session messagelist after disconnect.

2004-09-14  Ilja Booij  <ilja@ic-s.nl>

	* acl.c (acl_has_right): changed from ACL_ANYONE_USER to 
	DBMAIL_ACL_ANYONE_USER

	* acl.h: DBMAIL_ACL_ANYONE_USER moved to db.h

	* db.h (DBMAIL_ACL_ANYONE_USER): moved to db.h

	* db.c (db_list_mailboxes_by_regex): changed queries to work with
	DBMAIL_ACL_ANYONE_USER. Mailboxes with ACL for anyone can now also
	be listed.

	* INSTALL.postfix: trivial fix. changed reference to 'aliases' table
	to 'dbmail_aliases'.

2004-09-14  Paul Stevens <paul@nfg.nl>

	* dbmailtypes.h, dbsearch.c, dbsearch.h, imap4.c, imap4.h, imapcommands.c,
	imapcommands.h, imaputil.c, imaputil.h, list.c, list.h: applied Leif
	Jackson's sort patch wich adds server-side sorting.

2004-09-10  Paul Stevens <paul@nfg.nl>
