@@ -95,10 +95,13 @@ system's preferred config file location.
 Quietly skip interactive prompts and helpful status messages which
 would otherwise be printed to \fIstdout\fR.  Use two \fB-q\fR's to
 silence errors which would otherwise be printed to \fIstderr\fR.
-.IP \fB-n\fR
-Show the intended action but do not perform it, as though no to all.
-.IP \fB-y\fR
-Perform all proposed actions, as though yes to all.
+
+.% will be supported in the future
+.% .IP \fB-n\fR
+.% Show the intended action but do not perform it, as though no to all.
+.% .IP \fB-y\fR
+.% Perform all proposed actions, as though yes to all.
+
 .IP \fB-v\fR
 Operate verbosely.
 Some of the utilities in the DBMail suite can take two \fB-v\fR's
